--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="App do Banco do Balas para transferências entre usuários"
+      content="App para jogar Imperius"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/logo_BB.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Banco do Balas</title>
+    <title>Imperius Counter</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
